// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions accountUpdate 1`] = `
Object {
  "type": "web3Account",
  "value": "test",
}
`;

exports[`actions balanceUpdate 1`] = `
Object {
  "type": "web3Balance",
  "value": 123,
}
`;

exports[`actions gasPriceUpdate 1`] = `
Object {
  "type": "web3GasPrice",
  "value": 123,
}
`;

exports[`actions getAccount 1`] = `
Array [
  Object {
    "type": "web3Account",
    "value": "0x0",
  },
]
`;

exports[`actions getBalance 1`] = `
Array [
  Object {
    "type": "web3Balance",
    "value": 456,
  },
]
`;

exports[`actions getGasPrice 1`] = `
Array [
  Object {
    "type": "web3GasPrice",
    "value": 456,
  },
]
`;

exports[`actions getNetwork 1`] = `
Array [
  Object {
    "type": "web3Network",
    "value": 123,
  },
]
`;

exports[`actions networkUpdate 1`] = `
Object {
  "type": "web3Network",
  "value": 123,
}
`;
